Thu Mar 12 07:53:36 UTC 2009  Olli Savia  <ops@iki.fi>

        * tests/Bug_2953_Regression/server.cpp:
          Fixed compile warning.

Thu Mar 12 07:42:57 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * tao/GIOP_Message_Base.cpp:
        * tao/Transport.cpp:
        * tao/ZIOP/ZIOP.cpp:
          Refactored decompression of large data blocks.

        * tao/GIOP_Message_State.cpp:
        * tao/GIOP_Message_State.h:
        * tao/GIOP_Message_State.inl:
          Always set the compressed flag. Now, a ZIOP client
          connecting to a non-ZIOP server receives an
          exception.

        * tao/ZIOP/ZIOP_Policy_i.cpp:
          Return the compressor ID/Level list instead of
          a copy of this list.

        * tao/ZIOP/ZIOP_Stub.cpp:
          Refactored. Make a copy of an existing policy
          instead of creating a new one.

        * tests/ZIOP/client.cpp:
          Refactored.
          Extended tests.

        * tests/ZIOP/Hello.cpp:
        * tests/ZIOP/server.cpp:
        * tests/ZIOP/ZIOP.mpc:
          Extended tests.

Wed Mar 11 22:14:04 UTC 2009  Phil Mesnier  <mesnier_p@ociweb.com>

        * tao/ZIOP/ZIOP.cpp:
          Fix for wchar builds.

Wed Mar 11 19:40:38 UTC 2009  Olli Savia  <ops@iki.fi>

        * orbsvcs/tests/Notify/Bug_1884_Regression/common.h:
        * orbsvcs/tests/Notify/Bug_1884_Regression/filter.cpp:
          Fixed compile warnings.

Wed Mar 11 18:54:54 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * MPC/config/taobaseidldefaults.mpb:
          Added build_files as base project, that way also the mpc/mwc
          files are added to the generated solution. This way we see
          in the ms ide also for custom idl projects the mpc files.
          Thanks to Adam Mitz for suggesting this solution

Wed Mar 11 07:39:54 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * examples/Advanced/ch_12/icp.cpp
        * examples/Advanced/ch_18/icp.cpp
        * examples/Advanced/ch_21/icp.cpp